...
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/padding_normal"
        tools:context=".locationreminders.ReminderDescriptionActivity">

        <TextView
            android:id="@+id/reminderTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Reminder Title"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/reminderDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Reminder Description"
            android:textSize="@dimen/text_size_large"
            android:layout_marginTop="@dimen/margin_normal"
            app:layout_constraintBottom_toBottomOf="parent"
...
