package com.udacity.project4

import android.app.Activity
import android.app.Application
import androidx.arch.core.executor.testing.InstantTaskExecutorRule
import androidx.test.core.app.ActivityScenario
import androidx.test.core.app.ApplicationProvider.getApplicationContext
import androidx.test.espresso.Espresso.onView
import androidx.test.espresso.IdlingRegistry
import androidx.test.espresso.action.ViewActions.*
import androidx.test.espresso.assertion.ViewAssertions.matches
import androidx.test.espresso.matcher.RootMatchers.withDecorView
import androidx.test.espresso.matcher.ViewMatchers
import androidx.test.espresso.matcher.ViewMatchers.*
import androidx.test.ext.junit.runners.AndroidJUnit4
import androidx.test.filters.LargeTest
import com.udacity.project4.locationreminders.RemindersActivity
import com.udacity.project4.locationreminders.data.LocalInMemoryDB
import com.udacity.project4.locationreminders.data.ReminderDataSource
import com.udacity.project4.locationreminders.data.dto.ReminderDTO
import com.udacity.project4.locationreminders.data.local.RemindersLocalRepository
import com.udacity.project4.locationreminders.reminderslist.RemindersListViewModel
import com.udacity.project4.locationreminders.savereminder.SaveReminderViewModel
import com.udacity.project4.util.DataBindingIdlingResource
import com.udacity.project4.util.monitorActivity
import com.udacity.project4.utils.EspressoIdlingResource
import kotlinx.coroutines.ExperimentalCoroutinesApi
import kotlinx.coroutines.runBlocking
import org.hamcrest.CoreMatchers.*
import org.junit.After
import org.junit.Before
import org.junit.Rule
import org.junit.Test
import org.junit.runner.RunWith
import org.koin.androidx.viewmodel.dsl.viewModel
import org.koin.core.context.startKoin
import org.koin.core.context.stopKoin
import org.koin.dsl.module
import org.koin.test.AutoCloseKoinTest
import org.koin.test.get


@ExperimentalCoroutinesApi
@RunWith(AndroidJUnit4::class)
@LargeTest
// END TO END test to black box test the app
class RemindersActivityTest :
    AutoCloseKoinTest() { // Extended Koin Test - embed autoclose @after method to close Koin after every test

    private lateinit var repository: ReminderDataSource
    private lateinit var appContext: Application

    private val dataBindingIdlingResource = DataBindingIdlingResource()

    @get:Rule
    val instantExecutorRule = InstantTaskExecutorRule()

        /**
     * As we use Koin as a Service Locator Library to develop our code, we'll also use Koin to test our code.
     * at this step we will initialize Koin related code to be able to use it in out testing.
     */

    /**
     * As we use Koin as a Service Locator Library to develop our code, we'll also use Koin to test our code.
     * at this step we will initialize Koin related code to be able to use it in out testing.
     */
    @Before
    fun init() {
        stopKoin() // stop the original app koin
        appContext = getApplicationContext()
        val myModule = module {
            viewModel {
                RemindersListViewModel(
                    appContext,
                    get() as ReminderDataSource
                )
            }
            single {
                SaveReminderViewModel(
                    appContext,
                    get() as ReminderDataSource
                )
            }
            single { RemindersLocalRepository(get()) as ReminderDataSource }
            single { LocalInMemoryDB.createRemindersDao(appContext) }
        }
        // declare a new koin module
        startKoin {
            modules(listOf(myModule))
        }
        // Get our real repository
        repository = get()

        // clear the data to start fresh
        runBlocking {
            repository.deleteAllReminders()
        }
    }

    @Before
    fun registerIdlingResource() {
        IdlingRegistry.getInstance().register(EspressoIdlingResource.countingIdlingResource)
        IdlingRegistry.getInstance().register(dataBindingIdlingResource)
    }

    @After
    fun unregisterIdlingResource() {
        IdlingRegistry.getInstance().unregister(EspressoIdlingResource.countingIdlingResource)
        IdlingRegistry.getInstance().unregister(dataBindingIdlingResource)
    }

    //     add End to End testing to the app
    @Test
    fun reminders_e2e(): Unit = runBlocking {
        repository.saveReminder(ReminderDTO("TITLE1", "DESCRIPTION1", "LOCATION1", 11.0, 12.0))
        repository.saveReminder(ReminderDTO("TITLE2", "DESCRIPTION2", "LOCATION2", 21.0, 22.0))

        val activityScenario = ActivityScenario.launch(RemindersActivity::class.java)

        activityScenario.use { scenario ->

            dataBindingIdlingResource.monitorActivity(scenario)

            onView(withText("TITLE1")).check(matches(isDisplayed()))
            onView(withText("LOCATION1")).check(matches(isDisplayed()))
            onView(withText("TITLE2")).check(matches(isDisplayed()))
            onView(withText("LOCATION2")).check(matches(isDisplayed()))
            // Click on the task on the list and verify that all the data is correct.
            onView(withId(R.id.addReminderFAB)).perform(click())
            onView(withId(R.id.saveReminder)).perform(click())

            onView(withId(com.google.android.material.R.id.snackbar_text))
                .check(matches(withText(R.string.err_enter_title)))

            onView(withId(R.id.reminderTitle)).perform(typeText("A title"))
            onView(isRoot()).perform(closeSoftKeyboard())
            onView(withId(R.id.saveReminder)).perform(click())

            onView(withId(com.google.android.material.R.id.snackbar_text))
                .check(matches(withText(R.string.err_enter_title)))

            onView(withId(R.id.reminderDescription)).perform(typeText("A description"))
            onView(isRoot()).perform(closeSoftKeyboard())

            onView(withId(R.id.selectLocation)).perform(click())
            onView(withId(R.id.map)).perform(longClick())

            onView(withId(R.id.saveButton))
                .check(matches(isEnabled()))

            onView(withId(R.id.saveButton)).perform(click())

            onView(withText(R.string.custom_location)).check(matches(isDisplayed()))

            onView(withId(R.id.saveReminder)).perform(click())

            onView(withText(R.string.custom_location)).check(matches(isDisplayed()))

            onView(withText("A title")).check(matches(isDisplayed()))
            onView(withText(R.string.custom_location)).check(matches(isDisplayed()))

            // Works only on devices with API level <= 29
            // See also: https://github.com/android/android-test/issues/803
            onView(withText(R.string.reminder_saved)).inRoot(withDecorView(not(`is`(dataBindingIdlingResource.activity.window.decorView)))).check(matches(isDisplayed()))
        }
    }
}
